--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
               <div>
                 <h4 class="title">Hiszpania</h4>
                 <p class="description">
-                  To tylko przykładowy kraj do którego mozesz pojechać
+                  Marzysz o wakacjach w ciepłym kraju? Z Nami będziesz mobilny na miejscu i zwiedzisz co tylko zechcesz.
                 </p>
                 <!-- <a href="service-details.html" class="readmore stretched-link"
                   ><span>Learn More</span><i class="bi bi-arrow-right"></i
@@ -206,7 +206,7 @@
               <div>
                 <h4 class="title">Włochy</h4>
                 <p class="description">
-                  To tylko przykładowy kraj do którego mozesz pojechać
+                  Może winobranie we Włoszech? A może chciałeś spróbować światowej pizzy i zwiedzić starożytne zabytki?
                 </p>
                 <!-- <a href="service-details.html" class="readmore stretched-link"
                   ><span>Learn More</span><i class="bi bi-arrow-right"></i
@@ -226,7 +226,7 @@
               <div>
                 <h4 class="title">Norwegia</h4>
                 <p class="description">
-                  To tylko przykładowy kraj do którego mozesz pojechać
+                  Dochodowy kontrakt w krajach skandynawskich? Nasze pojazdy zapewnią Ci mobilność w miejscach w odległych miejscach.
                 </p>
                 <!-- <a href="service-details.html" class="readmore stretched-link"
                   ><span>Learn More</span><i class="bi bi-arrow-right"></i
