--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
           <ul>
             <li><a href="index.html" class="active">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="services.html">Services</a></li>
+            <li><a href="services.html">Nasze pojazdy</a></li>
             <li><a href="pricing.html">Pricing</a></li>
 
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="contact.html">Kontakt</a></li>
             <!-- <li><a class="get-a-quote" href="get-a-quote.html">Get a Quote</a></li> -->
           </ul>
         </nav>
@@ -87,7 +87,7 @@
               Nasza firma oferuje wynajem busów osobowych w celach rekreacyjnych
               jak i zawodowych. Dysponujemy nowoczesną flotą samochodów, która
               bezproblemowo dowiezie Państwa do celu. Stawiamy na niezawodność i
-              bezpieczeństwo.
+              bezpieczeństwo. Nasze pojazdy podróżują po całej Europie.
             </p>
 
             <!-- <form
@@ -104,7 +104,7 @@
               <button type="submit" class="btn btn-primary">Search</button>
             </form> -->
 
-            <div class="row gy-4" data-aos="fade-up" data-aos-delay="400">
+            <!-- <div class="row gy-4" data-aos="fade-up" data-aos-delay="400">
               <div class="col-lg-3 col-6">
                 <div class="stats-item text-center w-100 h-100">
                   <span
@@ -116,7 +116,6 @@
                   <p>Clients</p>
                 </div>
               </div>
-              <!-- End Stats Item -->
 
               <div class="col-lg-3 col-6">
                 <div class="stats-item text-center w-100 h-100">
@@ -129,7 +128,6 @@
                   <p>Projects</p>
                 </div>
               </div>
-              <!-- End Stats Item -->
 
               <div class="col-lg-3 col-6">
                 <div class="stats-item text-center w-100 h-100">
@@ -142,7 +140,6 @@
                   <p>Support</p>
                 </div>
               </div>
-              <!-- End Stats Item -->
 
               <div class="col-lg-3 col-6">
                 <div class="stats-item text-center w-100 h-100">
@@ -155,8 +152,7 @@
                   <p>Workers</p>
                 </div>
               </div>
-              <!-- End Stats Item -->
-            </div>
+            </div> -->
           </div>
 
           <div class="col-lg-5 order-1 order-lg-2 hero-img" data-aos="zoom-out">
@@ -186,7 +182,8 @@
               <div>
                 <h4 class="title">Hiszpania</h4>
                 <p class="description">
-                  Marzysz o wakacjach w ciepłym kraju? Z Nami będziesz mobilny na miejscu i zwiedzisz co tylko zechcesz.
+                  Marzysz o wakacjach w ciepłym kraju? Z Nami będziesz mobilny
+                  na miejscu i zwiedzisz co tylko zechcesz.
                 </p>
                 <!-- <a href="service-details.html" class="readmore stretched-link"
                   ><span>Learn More</span><i class="bi bi-arrow-right"></i
@@ -206,7 +203,8 @@
               <div>
                 <h4 class="title">Włochy</h4>
                 <p class="description">
-                  Może winobranie we Włoszech? A może chciałeś spróbować światowej pizzy i zwiedzić starożytne zabytki?
+                  Może winobranie we Włoszech? A może chciałeś spróbować
+                  światowej pizzy i zwiedzić starożytne zabytki?
                 </p>
                 <!-- <a href="service-details.html" class="readmore stretched-link"
                   ><span>Learn More</span><i class="bi bi-arrow-right"></i
@@ -226,7 +224,8 @@
               <div>
                 <h4 class="title">Norwegia</h4>
                 <p class="description">
-                  Dochodowy kontrakt w krajach skandynawskich? Nasze pojazdy zapewnią Ci mobilność w miejscach w odległych miejscach.
+                  Dochodowy kontrakt w krajach skandynawskich? Nasze pojazdy
+                  zapewnią Ci mobilność w odległych miejscach.
                 </p>
                 <!-- <a href="service-details.html" class="readmore stretched-link"
                   ><span>Learn More</span><i class="bi bi-arrow-right"></i
@@ -253,42 +252,46 @@
               ></a>
             </div>
             <div class="col-lg-6 content order-last order-lg-first">
-              <h3>About Us</h3>
+              <h3>O nas</h3>
               <p>
-                Dolor iure expedita id fuga asperiores qui sunt consequatur
-                minima. Quidem voluptas deleniti. Sit quia molestiae quia quas
-                qui magnam itaque veritatis dolores. Corrupti totam ut eius
-                incidunt reiciendis veritatis asperiores placeat.
+                Stawiamy na jakość. Zależy nam aby nasi pasażerowie czuli sie
+                podczas podróży bezpiecznie, dlatego w naszej flocie znajdują
+                się tylko pojazdy kilkuletnie, w pełni sprawne technicznie.
+                Samochody cechuje wysoka niezawodność i duży komfort podróży.
+                Wszystkie auta posiadaja klimatyzację i odpowiednie ubezpiecznie
+                na Europę, a na życzenie Klienta oferujemy Kierowcę na
+                wyłączność. Dzięki tym udogodnieniom nasz Klient nie musi martwić się na
+                zapas przy dalekiej trasie.
               </p>
               <ul>
                 <li data-aos="fade-up" data-aos-delay="100">
                   <i class="bi bi-diagram-3"></i>
                   <div>
-                    <h5>Ullamco laboris nisi ut aliquip consequat</h5>
-                    <p>
+                    <h5>Wysoki standard samochodów</h5>
+                    <!-- <p>
                       Magni facilis facilis repellendus cum excepturi quaerat
                       praesentium libre trade
-                    </p>
+                    </p> -->
                   </div>
                 </li>
                 <li data-aos="fade-up" data-aos-delay="200">
                   <i class="bi bi-fullscreen-exit"></i>
                   <div>
-                    <h5>Magnam soluta odio exercitationem reprehenderi</h5>
-                    <p>
-                      Quo totam dolorum at pariatur aut distinctio dolorum
-                      laudantium illo direna pasata redi
-                    </p>
+                    <h5>Szeroki zakres ubezpieczenia</h5>
+                    <!-- <p>
+                      Magni facilis facilis repellendus cum excepturi quaerat
+                      praesentium libre trade
+                    </p> -->
                   </div>
                 </li>
                 <li data-aos="fade-up" data-aos-delay="300">
                   <i class="bi bi-broadcast"></i>
                   <div>
-                    <h5>Voluptatem et qui exercitationem</h5>
-                    <p>
-                      Et velit et eos maiores est tempora et quos dolorem autem
-                      tempora incidunt maxime veniam
-                    </p>
+                    <h5>Możliwość wynajęcia kierowcy</h5>
+                    <!-- <p>
+                      Magni facilis facilis repellendus cum excepturi quaerat
+                      praesentium libre trade
+                    </p> -->
                   </div>
                 </li>
               </ul>
