--- a/services.html
+++ b/services.html
@@ -56,10 +56,10 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="services.html" class="active">Services</a></li>
+          <li><a href="services.html" class="active">Nasze pojazdy</a></li>
           <li><a href="pricing.html">Pricing</a></li>
         
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="contact.html">Kontakt</a></li>
           <!-- <li><a class="get-a-quote" href="get-a-quote.html">Get a Quote</a></li> -->
         </ul>
       </nav><!-- .navbar -->
