--- a/contact.html
+++ b/contact.html
@@ -227,7 +227,8 @@
 
     <!-- ======= Footer ======= -->
     <footer id="footer" class="footer">
-      <div class="container">
+
+      <!-- <div class="container">
         <div class="row gy-4">
           <div class="col-lg-5 col-md-12 footer-info">
             <a href="index.html" class="logo d-flex align-items-center">
@@ -281,21 +282,16 @@
             </p>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <div class="container mt-4">
         <div class="copyright">
-          &copy; Copyright <strong><span>Logis</span></strong
+          &copy; Copyright <strong><span>BusDrive</span></strong
           >. All Rights Reserved
         </div>
-        <div class="credits">
-          <!-- All the links in the footer should remain intact. -->
-          <!-- You can delete the links only if you purchased the pro version. -->
-          <!-- Licensing information: https://bootstrapmade.com/license/ -->
-          <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/logis-bootstrap-logistics-website-template/ -->
-          Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-        </div>
+        <div class="credits">Designed by BusDrive</div>
       </div>
+
     </footer>
     <!-- End Footer -->
     <!-- End Footer -->
