fade-up contact

--- a/contact.html
+++ b/contact.html
@@ -116,11 +116,10 @@
         <div class="container row mx-auto">
           <div class="col col-12 col-md-6 phone-div">
             <h1 class="phone-itself">+48 601 870 505</h1>
-
           </div>
-          <div class="col col-12 col-md-6 phone-img-div">
-            <img class="phone-img-itself" src="./assets/img/quote-bg.jpg" alt="phone-img">
 
+          <div class="col col-12 col-md-6 phone-img-div" data-aos="fade-up" data-aos-delay="400">
+            <img class="phone-img-itself" src="./assets/img/quote-bg.jpg" alt="phone-img">
           </div>
 
         </div>
