--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                 <li data-aos="fade-up" data-aos-delay="200">
                   <i class="bi bi-fullscreen-exit"></i>
                   <div>
-                    <h5>Szeroki zakres ubezpieczenia</h5>
+                    <h5>Podróze po całej Europie</h5>
                     <!-- <p>
                       Magni facilis facilis repellendus cum excepturi quaerat
                       praesentium libre trade
