--- a/services.html
+++ b/services.html
@@ -93,12 +93,13 @@
           <div class="container position-relative">
             <div class="row d-flex justify-content-center">
               <div class="col-lg-6 text-center">
-                <h2>Services</h2>
+                <h2>Flota</h2>
                 <p>
-                  Odio et unde deleniti. Deserunt numquam exercitationem.
-                  Officiis quo odio sint voluptas consequatur ut a odio
-                  voluptatem. Sit dolorum debitis veritatis natus dolores. Quasi
-                  ratione sint. Sit quaerat ipsum dolorem.
+                  Nasze pojazdy są wizytówką Firmy. Bez dobrego samochodu nie ma
+                  satysfakcjonującej podróży, dlatego zależy nam aby nasza Flota
+                  spełniała oczekiwania wszystkich Klientów. W naszym
+                  asortymenie nie uświadczysz samochodów zużytych. Stawiamy na
+                  jakość.
                 </p>
               </div>
             </div>
