--- a/services.html
+++ b/services.html
@@ -189,7 +189,7 @@
                     <li><i class="bi bi-check"></i> Klimatyzacja</li>
                     <li><i class="bi bi-check"></i> Ubezpieczenie</li>
                   </ul>
-                  <button class="buy-btn">Zarezerwuj</button>
+                  <a href="contact.html" class="buy-btn">Zarezerwuj</a>
                 </div>
               </div>
             </div>
@@ -219,7 +219,7 @@
                     <li><i class="bi bi-check"></i> Klimatyzacja</li>
                     <li><i class="bi bi-check"></i> Ubezpieczenie</li>
                   </ul>
-                  <button class="buy-btn">Zarezerwuj</button>
+                  <a href="contact.html" class="buy-btn">Zarezerwuj</a>
                 </div>
               </div>
             </div>
@@ -249,7 +249,7 @@
                     <li><i class="bi bi-check"></i> Klimatyzacja</li>
                     <li><i class="bi bi-check"></i> Ubezpieczenie</li>
                   </ul>
-                  <button class="buy-btn">Zarezerwuj</button>
+                  <a href="contact.html" class="buy-btn">Zarezerwuj</a>
                 </div>
               </div>
             </div>
