--- a/services.html
+++ b/services.html
@@ -61,7 +61,7 @@
         <a href="index.html" class="logo d-flex align-items-center">
           <!-- Uncomment the line below if you also wish to use an image logo -->
           <!-- <img src="assets/img/logo.png" alt=""> -->
-          <h1>Logis</h1>
+          <h1>BusDrive</h1>
         </a>
 
         <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
@@ -71,7 +71,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="services.html" class="active">Nasze pojazdy</a></li>
-            <li><a href="pricing.html">Pricing</a></li>
+            <!-- <li><a href="pricing.html">Pricing</a></li> -->
 
             <li><a href="contact.html">Kontakt</a></li>
             <!-- <li><a class="get-a-quote" href="get-a-quote.html">Get a Quote</a></li> -->
