--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="services.html">Nasze pojazdy</a></li>
-            <li><a href="pricing.html">Pricing</a></li>
+            <!-- <li><a href="pricing.html">Pricing</a></li> -->
 
             <li><a href="contact.html" class="active">Kontakt</a></li>
             <!-- <li><a class="get-a-quote" href="get-a-quote.html">Get a Quote</a></li> -->
