--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
             <li><a href="index.html" class="active">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="services.html">Nasze pojazdy</a></li>
-            <li><a href="pricing.html">Pricing</a></li>
-
+            <!-- <li><a href="pricing.html">Pricing</a></li> -->
             <li><a href="contact.html">Kontakt</a></li>
             <!-- <li><a class="get-a-quote" href="get-a-quote.html">Get a Quote</a></li> -->
           </ul>
@@ -260,12 +259,12 @@
                 Samochody cechuje wysoka niezawodność i duży komfort podróży.
                 Wszystkie auta posiadaja klimatyzację i odpowiednie ubezpiecznie
                 na Europę, a na życzenie Klienta oferujemy Kierowcę na
-                wyłączność. Dzięki tym udogodnieniom nasz Klient nie musi martwić się na
-                zapas przy dalekiej trasie.
+                wyłączność. Dzięki tym udogodnieniom nasz Klient nie musi
+                martwić się na zapas przy dalekiej trasie.
               </p>
               <ul>
                 <li data-aos="fade-up" data-aos-delay="100">
-                  <i class="bi bi-diagram-3"></i>
+                  <i class="bi bi-car-front-fill"></i>
                   <div>
                     <h5>Wysoki standard samochodów</h5>
                     <!-- <p>
@@ -275,7 +274,7 @@
                   </div>
                 </li>
                 <li data-aos="fade-up" data-aos-delay="200">
-                  <i class="bi bi-fullscreen-exit"></i>
+                  <i class="bi bi-globe-central-south-asia"></i>
                   <div>
                     <h5>Podróze po całej Europie</h5>
                     <!-- <p>
@@ -285,7 +284,7 @@
                   </div>
                 </li>
                 <li data-aos="fade-up" data-aos-delay="300">
-                  <i class="bi bi-broadcast"></i>
+                  <i class="bi bi-person-circle"></i>
                   <div>
                     <h5>Możliwość wynajęcia kierowcy</h5>
                     <!-- <p>
