--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <nav id="navbar" class="navbar">
           <ul>
             <li><a href="index.html" class="active">Home</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="about.html">Współpraca</a></li>
             <li><a href="services.html">Nasze pojazdy</a></li>
             <!-- <li><a href="pricing.html">Pricing</a></li> -->
             <li><a href="contact.html">Kontakt</a></li>
@@ -176,7 +176,7 @@
               data-aos="fade-up"
             >
               <div class="icon flex-shrink-0">
-                <i class="fa-solid fa-cart-flatbed"></i>
+                <i class="fa-solid fa-sun"></i>
               </div>
               <div>
                 <h4 class="title">Hiszpania</h4>
@@ -276,7 +276,7 @@
                 <li data-aos="fade-up" data-aos-delay="200">
                   <i class="bi bi-globe-central-south-asia"></i>
                   <div>
-                    <h5>Podróze po całej Europie</h5>
+                    <h5>Podróże po całej Europie</h5>
                     <!-- <p>
                       Magni facilis facilis repellendus cum excepturi quaerat
                       praesentium libre trade
