before global Clean

--- a/services.html
+++ b/services.html
@@ -205,7 +205,7 @@
                 </div>
                 <h3>Fiat Talento</h3>
                 <p class="car-description">
-                  Fiat Talento na wynajem - Twój niezawodny partner. Gotowy na
+                  Fiat Talento - Twój niezawodny partner. Gotowy na
                   każdą okazję. Wybierz Talento i ciesz się pewną i komfortową
                   podróżą.
                 </p>
