--- a/about.html
+++ b/about.html
@@ -122,7 +122,7 @@
             data-aos="fade-up"
           >
             <div class="col-md-5">
-              <img src="assets/img/features-1.jpg" class="img-fluid" alt="" />
+              <img src="assets/img/rentbus.jpg" class="img-fluid" alt="" />
             </div>
             <div class="col-md-7">
               <h3>Wynajem Busa na każdą okazję</h3>
@@ -140,7 +140,7 @@
             data-aos="fade-up"
           >
             <div class="col-md-5 order-1 order-md-2">
-              <img src="assets/img/features-2.jpg" class="img-fluid" alt="" />
+              <img src="assets/img/driver.jpg" class="img-fluid" alt="" />
             </div>
             <div class="col-md-7 order-2 order-md-1">
               <h3>Wynajem Kierowcy</h3>
@@ -160,7 +160,7 @@
             data-aos="fade-up"
           >
             <div class="col-md-5">
-              <img src="assets/img/features-3.jpg" class="img-fluid" alt="" />
+              <img src="assets/img/europe.jpg" class="img-fluid" alt="" />
             </div>
             <div class="col-md-7">
               <h3>Zasięg i ubezpieczenie</h3>
