new home photo and new video

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
           <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-out">
             <img
-              src="assets/img/hero.png"
+              src="assets/img/homes.jpg"
               class="img-fluid mb-3 mb-lg-0"
               alt=""
             />
@@ -221,10 +221,74 @@
                 <i class="fa-solid fa-truck-ramp-box"></i>
               </div>
               <div>
-                <h4 class="title">Norwegia</h4>
+                <h4 class="title">Szwecja</h4>
                 <p class="description">
                   Dochodowy kontrakt w krajach skandynawskich? Nasze pojazdy
                   zapewnią Ci mobilność w odległych miejscach.
+                </p>
+                <!-- <a href="service-details.html" class="readmore stretched-link"
+                  ><span>Learn More</span><i class="bi bi-arrow-right"></i
+                ></a> -->
+              </div>
+            </div>
+            <!-- End Service Item -->
+          </div>
+
+          <div class="row gy-4">
+            <div
+              class="col-lg-4 col-md-6 service-item d-flex"
+              data-aos="fade-up"
+            >
+              <div class="icon flex-shrink-0">
+                <i class="bi bi-tsunami"></i>
+              </div>
+              <div>
+                <h4 class="title">Chorwacja</h4>
+                <p class="description">
+                  Bałkany spalone słońcem i skąpane w morzu brzmią zachęcająco?
+                  Zdecydowanie dobry kierunek!
+                </p>
+                <!-- <a href="service-details.html" class="readmore stretched-link"
+                  ><span>Learn More</span><i class="bi bi-arrow-right"></i
+                ></a> -->
+              </div>
+            </div>
+            <!-- End Service Item -->
+
+            <div
+              class="col-lg-4 col-md-6 service-item d-flex"
+              data-aos="fade-up"
+              data-aos-delay="100"
+            >
+              <div class="icon flex-shrink-0">
+                <i class="bi bi-sunglasses"></i>
+              </div>
+              <div>
+                <h4 class="title">Francja</h4>
+                <p class="description">
+                  Zawsze chciałeś zobaczyć Wieżę Eiffla? A może pragniesz
+                  spróbować tutejszych serów francuskich ciastek?
+                </p>
+                <!-- <a href="service-details.html" class="readmore stretched-link"
+                  ><span>Learn More</span><i class="bi bi-arrow-right"></i
+                ></a> -->
+              </div>
+            </div>
+            <!-- End Service Item -->
+
+            <div
+              class="col-lg-4 col-md-6 service-item d-flex"
+              data-aos="fade-up"
+              data-aos-delay="200"
+            >
+              <div class="icon flex-shrink-0">
+                <i class="bi bi-backpack2-fill"></i>
+              </div>
+              <div>
+                <h4 class="title">Niemcy</h4>
+                <p class="description">
+                  Nie widziałeś jeszcze Bramy Brandenburskiej? Droga wiedzie
+                  przez piękne landy i świetną infrastrukturę.
                 </p>
                 <!-- <a href="service-details.html" class="readmore stretched-link"
                   ><span>Learn More</span><i class="bi bi-arrow-right"></i
@@ -246,7 +310,7 @@
             >
               <img src="assets/img/about.jpg" class="img-fluid" alt="" />
               <a
-                href="https://www.youtube.com/watch?v=LXb3EKWsInQ"
+                href="https://www.youtube.com/watch?v=he-aCCA2ONI"
                 class="glightbox play-btn"
               ></a>
             </div>
