--- a/contact.html
+++ b/contact.html
@@ -115,6 +115,7 @@
         <div class="container row mx-auto">
           <div class="col col-12 col-md-6 phone-div">
             <h1 class="phone-itself">+48 601 870 505</h1>
+            <h1 class="phone-itself">kontakt@busdrive.pl</h1>
           </div>
 
           <div class="col col-12 col-md-6 phone-img-div" data-aos="fade-up" data-aos-delay="400">
