new favicon, video deleted

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>Logis Bootstrap Template - Index</title>
+    <title>BusDrive</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
     <!-- Favicons -->
-    <link href="assets/img/favicon.png" rel="icon" />
+    <link href="assets/img/bus-icon.png" rel="icon" />
     <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
 
     <!-- Google Fonts -->
@@ -154,10 +154,10 @@
             </div> -->
           </div>
 
-          <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-out">
+          <div class="col-lg-6 order-1 order-lg-2 " data-aos="zoom-out">
             <img
               src="assets/img/homes.jpg"
-              class="img-fluid mb-3 mb-lg-0"
+              class="img-fluid mb-3 mb-lg-0 hero-img"
               alt=""
             />
           </div>
@@ -309,10 +309,10 @@
               class="col-lg-6 position-relative align-self-start order-lg-last order-first"
             >
               <img src="assets/img/about.jpg" class="img-fluid" alt="" />
-              <a
+              <!-- <a
                 href="https://www.youtube.com/watch?v=he-aCCA2ONI"
                 class="glightbox play-btn"
-              ></a>
+              ></a> -->
             </div>
             <div class="col-lg-6 content order-last order-lg-first">
               <h3>O nas</h3>
