new photo peopleBus, citys added

--- a/about.html
+++ b/about.html
@@ -129,7 +129,11 @@
               <p>
                 Oferujamy wynajem Busow 9-osobowych na każdą okazję. Wakacje,
                 praca, podróż. Na parę dni bądź miesięcy - dla Nas to nie
-                problem.
+                problem. Znajdziesz nas w takich maiastach jak -
+                <b
+                  >Poznań, Września, Oborniki, Gniezno, Szamotuły, Leszno,
+                  Gorzów Wielkopolski, Zielona Góra, Słubice</b
+                >
               </p>
             </div>
           </div>
