--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
             <div
               class="col-lg-6 position-relative align-self-start order-lg-last order-first"
             >
-              <img src="assets/img/about.jpg" class="img-fluid" alt="" />
+              <img src="assets/img/peopleBus.jpg" class="img-fluid w-100 pt-3" alt="" />
               <!-- <a
                 href="https://www.youtube.com/watch?v=he-aCCA2ONI"
                 class="glightbox play-btn"
@@ -324,7 +324,7 @@
                 Wszystkie auta posiadaja klimatyzację i odpowiednie ubezpiecznie
                 na Europę, a na życzenie Klienta oferujemy Kierowcę na
                 wyłączność. Dzięki tym udogodnieniom nasz Klient nie musi
-                martwić się na zapas przy dalekiej trasie.
+                martwić się na zapas przy dalekiej trasie. <br> Nasza Baza mieści się w Poznaniu.
               </p>
               <ul>
                 <li data-aos="fade-up" data-aos-delay="100">
