--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             </div> -->
           </div>
 
-          <div class="col-lg-6 order-1 order-lg-2 " data-aos="zoom-out">
+          <div class="col-lg-6 order-1 order-lg-2" data-aos="zoom-out">
             <img
               src="assets/img/homes.jpg"
               class="img-fluid mb-3 mb-lg-0 hero-img"
@@ -308,7 +308,11 @@
             <div
               class="col-lg-6 position-relative align-self-start order-lg-last order-first"
             >
-              <img src="assets/img/peopleBus.jpg" class="img-fluid w-100 pt-3" alt="" />
+              <img
+                src="assets/img/peopleBus.jpg"
+                class="img-fluid w-100 pt-3"
+                alt=""
+              />
               <!-- <a
                 href="https://www.youtube.com/watch?v=he-aCCA2ONI"
                 class="glightbox play-btn"
@@ -324,7 +328,9 @@
                 Wszystkie auta posiadaja klimatyzację i odpowiednie ubezpiecznie
                 na Europę, a na życzenie Klienta oferujemy Kierowcę na
                 wyłączność. Dzięki tym udogodnieniom nasz Klient nie musi
-                martwić się na zapas przy dalekiej trasie. <br> Nasza Baza mieści się w Poznaniu.
+                martwić się na zapas przy dalekiej trasie. <br /><b
+                  >Nasza Baza mieści się w Poznaniu.</b
+                >
               </p>
               <ul>
                 <li data-aos="fade-up" data-aos-delay="100">
