--- a/index.html
+++ b/index.html
@@ -218,13 +218,13 @@
               data-aos-delay="200"
             >
               <div class="icon flex-shrink-0">
-                <i class="fa-solid fa-truck-ramp-box"></i>
+                <i class="bi bi-snow2"></i>
               </div>
               <div>
-                <h4 class="title">Szwecja</h4>
+                <h4 class="title">Austria</h4>
                 <p class="description">
-                  Dochodowy kontrakt w krajach skandynawskich? Nasze pojazdy
-                  zapewnią Ci mobilność w odległych miejscach.
+                  Austria to świetny kierunek dla miłośników jazdy nartach i
+                  zimowego szaleństwa.
                 </p>
                 <!-- <a href="service-details.html" class="readmore stretched-link"
                   ><span>Learn More</span><i class="bi bi-arrow-right"></i
