--- a/about.html
+++ b/about.html
@@ -170,7 +170,7 @@
               <h3>Zasięg i ubezpieczenie</h3>
               <p>
                 Nasze samochody jeżdzą po całej Europie. Każdy z nich ma
-                dedykowane, obszerne ubezpieczenie, które zapewnia bezpiecznie
+                dedykowane, obszerne ubezpieczenie, które zapewnia bezpieczne
                 holowanie w przypadku niefortunnych zdarzeń. Cenimy sobie
                 bezpieczeństwo i transparentność naszych usług.
               </p>
