--- a/contact.html
+++ b/contact.html
@@ -90,7 +90,7 @@
                 <p>
                   Jeżeli chcesz zarezerwować pojazd, lub masz jakieś pytania -
                   zadzwoń. Chętnie odpowiemy na wszystkie nurtujące Cię kwestie
-                  i rozjaśnimy jakiekowiek wątpliwości
+                  i rozjaśnimy jakiekowiek wątpliwości.
                 </p>
               </div>
             </div>
