--- a/contact.html
+++ b/contact.html
@@ -42,8 +42,6 @@
 
     <!-- Template Main CSS File -->
     <link href="assets/css/main.css" rel="stylesheet" />
-
-
   </head>
 
   <body>
@@ -105,26 +103,64 @@
             </ol>
           </div>
         </nav> -->
-
       </div>
       <!-- End Breadcrumbs -->
 
       <!-- ======= Contact Section ======= -->
       <section id="contact" class="contact">
-
         <div class="container row mx-auto">
           <div class="col col-12 col-md-6 phone-div">
             <h1 class="phone-itself">+48 601 870 505</h1>
             <h1 class="phone-itself">kontakt@busdrive.pl</h1>
           </div>
 
-          <div class="col col-12 col-md-6 phone-img-div" data-aos="fade-up" data-aos-delay="400">
-            <img class="phone-img-itself" src="./assets/img/quote-bg.jpg" alt="phone-img">
+          <div
+            class="col col-12 col-md-6 phone-img-div"
+            data-aos="fade-up"
+            data-aos-delay="400"
+          >
+            <img
+              class="phone-img-itself"
+              src="./assets/img/quote-bg.jpg"
+              alt="phone-img"
+            />
           </div>
-
         </div>
 
+        <div class="container row mx-auto mt-4">
+          <div
+            class="col col-12 col-md-6 phone-img-div"
+            data-aos="fade-up"
+            data-aos-delay="400"
+          >
+            <img
+              class="phone-img-itself"
+              src="./assets/img/miasta-big.jpg"
+              alt="phone-img"
+            />
+          </div>
 
+          <div class="col col-12 col-md-6 pt-5 car-info">
+            <h5>Nasze samochody możesz odebrać w miastach:</h5>
+            <!-- <div class="car-info"> -->
+            <ul class="ul-city">
+              <li><i class="bi bi-geo-alt-fill"></i>Poznań</li>
+              <li><i class="bi bi-geo-alt-fill"></i>Września</li>
+              <li><i class="bi bi-geo-alt-fill"></i>Oborniki</li>
+              <li><i class="bi bi-geo-alt-fill"></i>Gniezno</li>
+              <li><i class="bi bi-geo-alt-fill"></i>Szamotuły</li>
+            </ul>
+
+            <ul class="ul-city">
+              <li><i class="bi bi-geo-alt-fill"></i>Leszno</li>
+              <li><i class="bi bi-geo-alt-fill"></i>Gorzów Wielkopolski</li>
+              <li><i class="bi bi-geo-alt-fill"></i>Zielona Góra</li>
+              <li><i class="bi bi-geo-alt-fill"></i>Słubice</li>
+            </ul>
+            <!-- </div> -->
+
+          </div>
+        </div>
 
         <!-- <div class="container" data-aos="fade-up">
           <div>
@@ -230,8 +266,6 @@
             
           </div>
         </div> -->
-
-
       </section>
 
       <!-- End Contact Section -->
@@ -240,7 +274,6 @@
 
     <!-- ======= Footer ======= -->
     <footer id="footer" class="footer">
-
       <!-- <div class="container">
         <div class="row gy-4">
           <div class="col-lg-5 col-md-12 footer-info">
@@ -304,7 +337,6 @@
         </div>
         <div class="credits">Designed by BusDrive</div>
       </div>
-
     </footer>
     <!-- End Footer -->
     <!-- End Footer -->
