last photo bus-dla-firm

--- a/pricing.html
+++ b/pricing.html
@@ -123,7 +123,7 @@
             data-aos="fade-up"
           >
             <div class="col-md-5">
-              <img src="assets/img/rentbus.jpg" class="img-fluid" alt="" />
+              <img src="assets/img/bus-dla-firm.jpg" class="img-fluid" alt="" />
             </div>
             <div class="col-md-7">
               <h3>Potrzebujesz samochodu dla pracowników?</h3>
